# multilevel-flow-experiments

./: .gitignore  README.md  environment.yml  flow-hmc-check.py  pyproject.toml
extra/: python-fft.py
flows/: __init__.py  distributions.py  flow_hmc.py  layers.py  measurements.py  models.py  phi_four.py  physics.py  transforms.py  utils.py
flows/main/: Untitled.ipynb  train-example.org
flows/tests/: test_training.py  test_transforms.py  utils.py
main/: flow-hmc-check.py  lower-beta-train-network.py  model-acceptance-lower-beta-fixed-V.py  model-acceptance-upsampling.py  model-acceptance.py  train-network.py  upsampling-train-network.py
models/: L8_b0.65_l0.5_model.pth  L8_b0.6_l0.5_model.pth  L8_b0.7_l0.5_model.ckpt  L8_b0.7_l0.5_model.pth
notebooks/: basic_multilevel-Copy1.ipynb  basic_multilevel.ipynb  test-notebook.org
