[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flows"
authors = [{name = "Joe Marsh Rossney", email = "Joe.Marsh-Rossney@ed.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/marshrossney/multilevel-flow-experiments"

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "flows"
